--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Entries Column -->
     <div class="col-md-8 col-xs-12">
       <!-- Main Image -->
-      <img class="img-responsive" src="photo.gif" alt="sakura and I"><br>
+      <img class="img-responsive" src="photo.jpg" alt="sakura and I"><br>
 
       <div style="margin-top:3%; text-align:justify;">                
         <p>Hello!</p>
