--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
       <div class="col">    
         <h2 id="nice-tools" style="margin-top: 10px;">Nice Tools</h2>
-        <p>When researching ancient Chinese history, I often found it hard to compile bibliographies. Luckily, “Sinobib” compiled by Paul R. Goldin has been very helpful in addressing this issue. If you want to have a try, please click <a href="http://sinobib.com">here</a>!</p>
+        <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, “Sinobib” compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <a href="http://sinobib.com">sinobib.com</a>!</p>
       </div>
     </div>
   </div>
