--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <b>Semantic Progression and Image-schema Transformation of Ideograms in Oracle Bones and Bronze Inscriptions</b> - Wenjie Hua, 6th International Conference on Cognitive Semantics
         </p>
         <p>
-          <b>Invoke Immortals: A Social History of Jianghuai Built on Divination and Techniques (1900 - 1949)</b> - Wenjie Hua, 73rd Midwest Conference on Asian Affairs
+          <b><a href="https://mcaaconference.nd.edu/program/panel-22/">Invoke Immortals: A Social History of Jianghuai Built on Divination and Techniques (1900 - 1949)</a></b> - Wenjie Hua, 73rd Midwest Conference on Asian Affairs
         </p>
       </div>
       <div class="col">    
