--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
       <div class="col">    
         <h2 id="papers" style="margin-top: 10px;">Papers</h2>
         <p>
-          <b>Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</b> - Wenjie Hua, Shenghan Xu, NAACL 2025, 2nd Ancient Language Processing
+          <b><a href="https://www.ancientnlp.com/alp2025/program/">Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</a></b> - Wenjie Hua, Shenghan Xu, NAACL 2025, 2nd Ancient Language Processing
         </p>
         <p>
-          <b>The Historian’s Fingerprint: A Computational Stylometric Study of the Zuo Commentary and Discourses of the States</b> - Wenjie Hua, NAACL 2025, 2nd Ancient Language Processing
+          <b><a href="https://www.ancientnlp.com/alp2025/program/">The Historian’s Fingerprint: A Computational Stylometric Study of the Zuo Commentary and Discourses of the States</a></b> - Wenjie Hua, NAACL 2025, 2nd Ancient Language Processing
         </p>
         <p>
           <b>Semantic Progression and Image-schema Transformation of Ideograms in Oracle Bones and Bronze Inscriptions</b> - Wenjie Hua, 6th International Conference on Cognitive Semantics
