--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <div class="col">    
         <h2 id="nice-tools" style="margin-top: 10px;">Nice Tools</h2>
         <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, “Sinobib” compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <a href="http://sinobib.com">sinobib.com</a>!</p>
+        <p>Here is another <a href="https://wjhuah.github.io/oracle/index_en.html">link</a> to quickly locate an oracle bone inscription along with its period and category.</p>
       </div>
     </div>
   </div>
