--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
       <div class="col">    
         <h2 id="nice-tools" style="margin-top: 10px;">Nice Tools</h2>
-        <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, <b>Sinobib</b> compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <a href="http://sinobib.com">sinobib.com</a>!</p>
+        <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, Sinobib compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <b><a href="http://sinobib.com">sinobib.com</a></b>!</p>
         <p>Here is another <b><a href="https://wjhuah.github.io/oracle/index_en.html">link</a></b> to quickly locate an oracle bone inscription along with its period and category.</p>
       </div>
     </div>
