--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Beyond academics, I served as vice president of the Chunying 萅英 Poetry Club, and my poems were published in several literary journals. Also, I am a loyal outdoor enthusiast, mountain climbing and cave exploring are my favorites.</p>
       </div> 
       <div class="col">    
-        <h2 id="papers" style="margin-top: 10px;">Papers</h2>
+        <h2 id="papers" style="margin-top: 10px;">Proceedings</h2>
         <p>
           <b><a href="https://www.ancientnlp.com/alp2025/program/">Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</a></b> - Wenjie Hua, Shenghan Xu, NAACL 2025, 2nd Ancient Language Processing
         </p>
@@ -95,7 +95,7 @@
       <div class="col">    
         <h2 id="nice-tools" style="margin-top: 10px;">Nice Tools</h2>
         <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, Sinobib compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <b><a href="http://sinobib.com">sinobib.com</a></b>!</p>
-        <p>Here is another <b><a href="https://wjhuah.github.io/oracle/index_en.html">link</a></b> to quickly locate an oracle bone inscription from Xiaotun South along with its period and category.</p>
+        <p>Here is another <b><a href="https://wjhuah.github.io/oracle/index_en.html">link</a></b> to quickly locate an oracle bone inscription from Xiaotun South 小屯南地 along with its period and category!</p>
       </div>
     </div>
   </div>
