--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </p>
       </div>
       <div class="col">    
-        <h2 id="nice-tools" style="margin-top: 10px;">Nice Tools</h2>
+        <h2 id="nice-tools" style="margin-top: 10px;">Tools</h2>
         <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, Sinobib compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <b><a href="http://sinobib.com">sinobib.com</a></b>!</p>
         <p>Here is another <b><a href="https://wjhuah.github.io/oracle/index_en.html">link</a></b> to quickly locate an oracle bone inscription from Xiaotun South 小屯南地 along with its period and category!</p>
       </div>
