--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="#papers">Papers</a></li> 
-        <li><a href="#">Nice Tools</a></li> 
+        <li><a href="#">Tools</a></li> 
       </ul>
     </div>
   </div>
@@ -67,6 +67,8 @@
       <img class="circular-image img-responsive" src="photo.jpg" alt="sakura and I"><br>
       <div> <p>Email: wjhuah AT gmail DOT com<br> </div>
       <div style="margin-top:2%">
+        <dd><a href="https://www.linkedin.com/in/wjhuah/">LinkedIn</a></dd>
+        <dd><a href="https://github.com/wjhuah/">GitHub</a></dd>
         <dd><a href="https://x.com/hwj2022chinese">Twitter</a></dd>
       </div>
     </div>
@@ -93,7 +95,7 @@
         </p>
       </div>
       <div class="col">    
-        <h2 id="nice-tools" style="margin-top: 10px;">Tools</h2>
+        <h2 id="tools" style="margin-top: 10px;">Tools</h2>
         <p>When researching ancient Chinese history, I often find it hard to compile bibliographies. Luckily, Sinobib compiled by Paul R. Goldin has been very helpful in this case. If you want to have a try, please visit <b><a href="http://sinobib.com">sinobib.com</a></b>!</p>
         <p>Here is another <b><a href="https://wjhuah.github.io/oracle/index_en.html">link</a></b> to quickly locate an oracle bone inscription from Xiaotun South 小屯南地 along with its period and category!</p>
       </div>
