--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="col">    
         <h2 id="papers" style="margin-top: 10px;">Proceedings</h2>
         <p>
-          <b><a href="https://arxiv.org/abs/2505.02983">Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</a></b> – Wenjie Hua, Shenghan Xu, NAACL 2025, 2nd Workshop on Ancient Language Processing (2nd place in the <a href="https://github.com/GoThereGit/EvaHan">EvaHan NER Challenge</a>; see <a href="https://aclanthology.org/2025.alp-1.19/">overview paper</a>).</p>  
+          <b><a href="https://arxiv.org/abs/2505.02983">Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</a></b> – Wenjie Hua, Shenghan Xu, NAACL 2025, 2nd Workshop on Ancient Language Processing (2nd place in the <a href="https://github.com/GoThereGit/EvaHan">EvaHan NER Challenge</a>; see <a href="https://aclanthology.org/2025.alp-1.19/">overview paper</a>)</p>  
         </p>
         <p>
           <b><a href="https://aclanthology.org/2025.alp-1.15/">The Historian’s Fingerprint: A Computational Stylometric Study of the Zuo Commentary and Discourses of the States</a></b> - Wenjie Hua, NAACL 2025, 2nd Ancient Language Processing
