--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       <div class="col">    
         <h2 id="papers" style="margin-top: 10px;">Proceedings</h2>
         <p>
-          <b><a href="https://arxiv.org/abs/2505.02983">Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</a></b> – Wenjie Hua, Shenghan Xu, NAACL 2025, 2nd Workshop on Ancient Language Processing (ranked second place in the <a href="https://github.com/GoThereGit/EvaHan">EvaHan 2025</a>; see <a href="https://aclanthology.org/2025.alp-1.19/">overview paper</a>)
+          <b><a href="https://arxiv.org/abs/2505.02983">Logits-Constrained Framework with RoBERTa for Ancient Chinese NER</a></b> – Wenjie Hua, Shenghan Xu, NAACL 2025, Second Workshop on Ancient Language Processing (ranked 2nd place in the <a href="https://github.com/GoThereGit/EvaHan">EvaHan 2025</a>; see <a href="https://aclanthology.org/2025.alp-1.19/">overview paper</a>)
         </p>
         <p>
-          <b><a href="https://aclanthology.org/2025.alp-1.15/">The Historian’s Fingerprint: A Computational Stylometric Study of the Zuo Commentary and Discourses of the States</a></b> - Wenjie Hua, NAACL 2025, 2nd Ancient Language Processing
+          <b><a href="https://aclanthology.org/2025.alp-1.15/">The Historian’s Fingerprint: A Computational Stylometric Study of the Zuo Commentary and Discourses of the States</a></b> - Wenjie Hua, NAACL 2025, Second Workshop on Ancient Language Processing
         </p>
         <p>
           <b>Semantic Progression and Image-schema Transformation of Ideograms in Oracle Bones and Bronze Inscriptions</b> - Wenjie Hua, 6th International Conference on Cognitive Semantics
